--- a/css/main/welcome_container.css
+++ b/css/main/welcome_container.css
@@ -302,4 +302,8 @@ body{
         justify-content: center !important;
         text-align: center;
     }
+
+        body {
+        font-family: 'Manrope';
+      }
 }
