--- a/css/main/welcome_container.css
+++ b/css/main/welcome_container.css
@@ -41,10 +41,11 @@ body{
     /* position: absolute; */
     max-width: 1170px;
     width: 81.25vw;
-    min-height: 628px;
+    min-height: 81.25vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items:center;
 }
 
 .dv_subtitle {
