--- a/css/main/feedback.css
+++ b/css/main/feedback.css
@@ -228,6 +228,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 
 .maksym-feedback {
