--- a/css/main/we_are_container.css
+++ b/css/main/we_are_container.css
@@ -8,7 +8,7 @@
     background-color: #F6BA13;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
